--- a/recipes/Skillet Chicken Bulgogi.htm
+++ b/recipes/Skillet Chicken Bulgogi.htm
@@ -1,1 +1,8 @@
+
 <h1>Skillet Chicken Bulgogi</h1>
+<img src="https://www.allrecipes.com/thmb/N0xw1-ndC5yPGUtR-7uKvXLgrLU=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():focal(999x0:1001x2):format(webp)/M7014953_JD_12015-4x3-1-86123f2555f54bd2ae9b2412c0838f1d.jpg" alt="Skillet Chicken Bulgogi">
+<h2>Description</h2>
+<p>I made this up one day when I couldn't find a recipe anywhere with these ingredients. 
+    So I kind of threw it together on a whim. Sugar can be adjusted for sweetness,</p>
+<p>and if the sauce gets a bit thicker than desired I suggest adding a 
+     little chicken broth as it's thickening. Serve immediately over rice </p>
